@@ -10,10 +10,11 @@ What can lgLoader do exactly?
 1. It provide a button on top panel, as well as buttons to clear message box and restart gnome-shell. They are marked as different color now.
 2. If you focus on anywhere execpt application windows using Ctrl-Alt-Tab, you can press F12 to open lookingGlass and then F12 to close it.
 3. Right click the lgLoader button to quickly restart gnome-shell.
-4. When reopen lookingGlass you will see the tab from last time.
+4. Click outside lookingGlass window to close it.
+5. When reopen lookingGlass you will see the tab from last time.
 
 last but not least
 ======================
-* I wrote this extension because I want something like firebug in gnome-shell. I'm a web developer and have used firebug for years, and it never disappointed me.
-* You may laugh at me, but it will be better if we do this work together. The comments and code are written carefully as far as I can. If you know javascript, I hope you can look into the source code and tell me what you think about that. I will treat document error as bugs.
-* Now I host this extension on github at <https://github.com/zhw2101024/lgLoader-zhw2101024>, welcome to join this project, either write wiki or create new issues.
+- I wrote this extension because I want something like firebug in gnome-shell. I'm a web developer and have used firebug for years, and it never disappointed me.
+- You may laugh at me, but it will be better if we do this work together. The comments and code are written carefully as far as I can. If you know javascript, I hope you can look into the source code and tell me what you think about that. I will treat document error as bugs.
+- Now I host this extension on github at <https://github.com/zhw2101024/lgLoader-zhw2101024>, welcome to join this project, either write wiki or create new issues.
