@@ -2,6 +2,7 @@ const Mainloop = imports.mainloop;
 const Clutter = imports.gi.Clutter;
 const Shell = imports.gi.Shell;
 const St = imports.gi.St;
+const Config = imports.misc.config
 
 const Lang = imports.lang;
 
@@ -22,7 +23,7 @@ const lgLoader = Extension.imports.lgLoader;
 const debug = Extension.imports.debug;
 let debugobj = new debug.Debug();
 
-let injections = {}, statusEvents = {}, panelEvents = new Array(), globalEvents = new Array();
+let injections = {}, statusEvents = {}, panelEvents = new Array(), globalEvents = new Array(), statusArea = Main.panel._statusArea ? Main.panel._statusArea : Main.panel.statusArea, _dateMenuEvent;
 
 /*
  * triggered when clicking on panel or stage to hide lookingGlass window
@@ -35,9 +36,12 @@ function _lgCloseEvent(actor, event) {
  * triggered when pressing F12 on almost everything except application windows
  */
 function _globalCapturedEvent(actor, event) {
-    if (event.type() == Clutter.EventType.KEY_PRESS) {
+    if (Clutter.EventType.KEY_PRESS == event.type()) {
+        if(null == Main.lookingGlass) {
+            this._createLookingGlass();
+        }
         let symbol = event.get_key_symbol();
-        if(symbol == Clutter.KEY_F12) {
+        if(Clutter.KEY_F12 == symbol) {
             Main.lookingGlass.toggle();
             return true;
         }
@@ -59,35 +63,66 @@ function enable() {
      * add line: global.stage.set_key_focus(this._entry);
      *   set focus to entry when lookingGlass is opened
      */
-    LookingGlass.LookingGlass.prototype.open = function() {
-        if (this._open)
-            return;
+    if(Config.PACKAGE_VERSION >= '3.7.2') {
+        LookingGlass.LookingGlass.prototype.open = function() {
+            if (this._open)
+                return;
 
-        if (!Main.pushModal(this._entry, { keybindingMode: Shell.KeyBindingMode.LOOKING_GLASS }))
-            return;
+            if (!Main.pushModal(this._entry, { keybindingMode: Shell.KeyBindingMode.LOOKING_GLASS }))
+                return;
 
-        this.actor.show();
-        this._open = true;
-        this._history.lastItem();
+            this.actor.show();
+            this._open = true;
+            this._history.lastItem();
 
-        Tweener.removeTweens(this.actor);
+            Tweener.removeTweens(this.actor);
 
-        Tweener.addTween(this.actor, { time: 0.5 / St.get_slow_down_factor(),
-            transition: 'easeOutQuad',
-            y: this._targetY
-        });
+            Tweener.addTween(this.actor, { time: 0.5 / St.get_slow_down_factor(),
+                transition: 'easeOutQuad',
+                y: this._targetY
+            });
 
-        global.stage.set_key_focus(this._entry);
-    };
+            global.stage.set_key_focus(this._entry);
+        };
+    } else if (Config.PACKAGE_VERSION <= '3.7.1') {
+        LookingGlass.LookingGlass.prototype.open = function() {
+            if (this._open)
+                return;
+
+            if (!Main.pushModal(this._entry))
+                return;
+
+            this.actor.show();
+            this._open = true;
+            this._history.lastItem();
+
+            Tweener.removeTweens(this.actor);
+
+            // We inverse compensate for the slow-down so you can change the factor
+            // through LookingGlass without long waits.
+            Tweener.addTween(this.actor, { time: 0.5 / St.get_slow_down_factor(),
+                transition: 'easeOutQuad',
+                y: this._targetY
+            });
+
+            global.stage.set_key_focus(this._entry);
+        };
+    }
 
     /*
      * When one of panel menus is opened, prevent lgLoader Button from being focued.
      * As we don't have a submenu, the button may interrupt open-state transfer among panel buttons.
      */
-    let statusArea = Main.panel.statusArea;
+    //let statusArea = Main.panel.statusArea;
     for(name in statusArea) {
         statusEvents[name] = statusArea[name].menu.connect('open-state-changed', function(menu, isOpen) {
-            Main.panel.statusArea.lgLoader.actor.can_focus = !isOpen;
+            statusArea.lgLoader.actor.can_focus = !isOpen;
+        });
+    }
+
+    if(Main.panel._dateMenu !== undefined) {
+        _dateMenuEvent = Main.panel._dateMenu.menu.connect('open-state-changed', function(menu, isOpen) {
+            statusArea.lgLoader.actor.can_focus = !isOpen;
         });
     }
 
@@ -96,8 +131,12 @@ function enable() {
      */
     let lgname = "lgLoader";
     let lgLoaderButton = lgLoader.lgLoaderButton;
-    let indicator = Main.panel.statusArea[lgname] = new lgLoaderButton();
-    Main.panel._addToPanelBox(lgname,indicator,1,Main.panel._centerBox);
+    let indicator = statusArea[lgname] = new lgLoaderButton();
+    if(Main.panel._addToPanelBox === undefined) {
+        Main.panel._centerBox.add(indicator.actor, {y_fill:true });
+    } else {
+        Main.panel._addToPanelBox(lgname,indicator,1,Main.panel._centerBox);
+    }
     panelEvents.push(Main.panel.actor.connect("button-press-event", _lgCloseEvent));
     globalEvents.push(global.stage.connect("button-press-event", _lgCloseEvent));
     globalEvents.push(global.stage.connect("captured-event", _globalCapturedEvent));
@@ -114,13 +153,16 @@ function disable() {
         global.stage.disconnect(globalEvents[id]);
     }
     for(name in statusEvents) {
-        Main.panel.statusArea[name].menu.disconnect(statusEvents[name]);
+        statusArea[name].menu.disconnect(statusEvents[name]);
+    }
+    if(_dateMenuEvent !== undefined) {
+        Main.panel._dateMenu.menu.disconnect(_dateMenuEvent);
     }
 
     /*
      * remove lgLoader button an titleBox in lookingGlass
      */
-    let lgLoaderobj = Main.panel.statusArea.lgLoader;
+    let lgLoaderobj = statusArea.lgLoader;
     Main.lookingGlass.actor.disconnect(lgLoaderobj.lgEvent);
     Main.lookingGlass.titleBox.destroy();
     lgLoaderobj.destroy();
