@@ -1,3 +1,5 @@
+ 2013-06-01
+ - add support for lower versions of gnome-shell
  2013-05-28
  - add hot keys and fixed a bug when navigating among panel buttons
  - add buttons to restart gnome-shell
